--- a/index.html
+++ b/index.html
@@ -189,16 +189,16 @@
         <div class="row section-padding">
             <div class="col-md-4 col-md-offset-4 text-center">
                 <h3>Quick References</h3>
-
-                        <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#dc-modal">
-                            <i class="fa fa-barcode"></i>&nbsp;&nbsp;Dress code
+                <br>
+                <p>
+                        <a class="btn btn-fill btn-small" data-toggle="modal" data-target="#dc-modal">
+                            <i class="fa fa-shirtsinbulk"></i>&nbsp;&nbsp;Dress code
                         </a>
-                        <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#dc-gifts">
-                            <i class="fa fa-barcode"></i>&nbsp;&nbsp;Gifts
+                        <a class="btn btn-fill btn-small" data-toggle="modal" data-target="#dc-gifts">
+                            <i class="fa fa-gift"></i>&nbsp;&nbsp;Gifts
                         </a>
-
-
-                <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#dc-menu">
+                    </p>
+                <a class="btn btn-fill btn-small" data-toggle="modal" data-target="#dc-menu">
                     <i class="fa fa-cutlery"></i>&nbsp;&nbsp;Menu
                 </a>
             </div>
