--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
             <div class="col-md-6">
                 <p>
-                    Our love story began in Charlotte, back in 2011. Michael was a frequent customer at The Flying Saucer, where Brittany called dibs to serve him as soon as he walked through the door. They quickly became friends, talking about regulars, school, and for some reason IKEA. Brittany moved away and they kept in touch for years to come. In 2016 Michael shot a message to Brittany to hang out. 6 years' worth of memories later. Traveling, two houses, crazy stories, COVID,  getting married, having kids, and now our reception. We can't wait to share that with you all finally. 
+                    Our love story began in Charlotte, back in 2011. Michael was a frequent customer at The Flying Saucer, where Brittany called dibs to serve him as soon as he walked through the door. They quickly became friends, talking about regulars, school, and for some reason IKEA. Brittany moved away to Nashville for a year, but they still kept in touch. In 2016 Michael shot a message to Brittany to hang out. It's been 6 years since then; traveling, two houses, crazy stories, COVID,  getting married, having a kid, and now our reception. We can't wait to share that with all of you!
                 </p>
             </div>
             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="wp5">
                     <h5>Ceramony <span class="time">4PM - 5PM</span></h5>
-                    <p>Get ready for us to say "I do" with the distant mountains and 150-year-old Oak as our backdrop. Clay Neely, a truly loved family friend of the groom, will be conducting the ceremony. Transportation will be provided for anyone in need of assistance. Blankets will be provided in case of a chill. Don't forget to bring them with you on your way to cocktail hour!
+                    <p>Get ready for us to say "I do" with the distant mountains and 150-year-old Oak as our backdrop. Clay Neely, a truly loved family friend of the groom, will be conducting the ceremony. Transportation to the ceremony site from the parking area will be provided for anyone in need of assistance. Blankets will be provided in case of a chill. Don't forget to bring them with you on your way to cocktail hour!
                     </p>
                 </div>
             </div>
