Changing up for orders needed

--- a/index.html
+++ b/index.html
@@ -571,38 +571,38 @@
                                   </div>
                               </div>
                               <div class="row">
+                                <div class="col-md-6 col-sm-6">
+                                    <div class="form-input-group">
+                                        <i class="fa fa-users"></i><input name="guests" class="" min="0"
+                                        max="6"
+                                        placeholder="Additional Guests"
+                                        required>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 col-sm-6">
+                                    <div class="form-input-group">
+                                        <i class="fa fa-key"></i><input type="number" name="invite_code" id="invite_code_yes"
+                                                                        class="" min="0"
+                                                                        placeholder="Invite code"
+                                                                        required>
+                                    </div>
+                                </div>
+                            </div>
+                              <div class="row">
                                   <div class="col-md-6 col-sm-6">
                                       <div class="form-input-group">
                                           <i class="fa fa-cutlery"></i>
                                               <input name="food" class="" min="0"
-                                                  placeholder="Chicken or Fish"
+                                                  placeholder="Chicken Orders"
                                                   required>
                                       </div>
                                   </div>
                                   <div class="col-md-6 col-sm-6">
                                       <div class="form-input-group">
-                                          <i class="fa fa-music"></i><input name="song"
+                                          <i class="fa fa-cutlery"></i><input name="song"
                                           class="" min="0"
-                                          placeholder="Song Request"
+                                          placeholder="Vegetarian Orders"
                                           required>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col-md-6 col-sm-6">
-                                      <div class="form-input-group">
-                                          <i class="fa fa-users"></i><input name="guests" class="" min="0"
-                                          max="4" value="0"
-                                          placeholder="Additional Guests"
-                                          required>
-                                      </div>
-                                  </div>
-                                  <div class="col-md-6 col-sm-6">
-                                      <div class="form-input-group">
-                                          <i class="fa fa-key"></i><input type="number" name="invite_code" id="invite_code_yes"
-                                                                          class="" min="0"
-                                                                          placeholder="Invite code"
-                                                                          required>
                                       </div>
                                   </div>
                               </div>
