update to timeline
Added an update to the timeline for correct order

--- a/index.html
+++ b/index.html
@@ -160,7 +160,12 @@
         <div class="row">
             <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                 <div class="wp3">
-                    <h5>Coctail hour <span class="time">3PM - 4PM</span></h5>
+                    <h5>Pre-Ceremony Welcome<span class="time">3:30PM - 4PM</span></h5>
+                    <p> Drinks and appetizers to get warmed up for the main event! Hope you are as excited as we are!
+                    </p>
+                </div>
+                <div class="wp3">
+                    <h5>Coctail hour <span class="time">5PM - 5:30PM</span></h5>
                     <p>The vows have been said, the rings have been exchanged. Now, it’s time to celebrate! Enjoy drinks and appetizers overlooking a beautiful sunset. We will be serving domestic beer and wine. Don't worry guys, the real party is soon to come. 
                     </p>
                 </div>
@@ -173,13 +178,18 @@
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
 
-                    <h5>Reception <span class="time">5PM-10PM</span></h5>
+                    <h5>Reception <span class="time">5:30PM-10PM</span></h5>
                     <p>We will be moving from the cocktail hour to the open concept reception in the barn. Our dinner will be served followed by toasts. Get ready for the first dance and cake to follow. We will be doing the bouquet toss and then partying until the farewell. 
                 </p>
                 </div>
                 <div class="wp6">
-                    <h5>Departure <span class="time">10PM-XXXX</span></h5>
+                    <h5>Departure <span class="time">10PM-11PM</span></h5>
                     <p>Help send off the new couple with sparklers! What a way to end a beautiful night. 
+                    </p>
+                </div>
+                <div class="wp6">
+                    <h5>Note:</h5>
+                    <p>All times are subject to change. Just go with the flow :D 
                     </p>
                 </div>
             </div>
